--- a/sssss.html
+++ b/sssss.html
@@ -1,7 +1,12 @@
 <html>
 <head>
 <center>
-<tittle><font size="12" color="red">Bss try kr rha hu humesha ka liya nahi ha</font></tittle>
+<tittle>
+ <style>
+   p:hover{color:blue; }
+ </style>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">]
+<font size="12" color="red">Bss try kr rha hu humesha ka liya nahi ha</font></tittle>
 </center>
 </head>
 <body>
